--- a/css/styles.css
+++ b/css/styles.css
@@ -475,7 +475,7 @@ section.presentation .present{
 }
 
 /* section test */
-/* .card {
+ .card1 {
   position: relative;
   width: 300px;
   height: 200px;
@@ -490,18 +490,18 @@ section.presentation .present{
   transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 
-.card svg {
+.card1 svg {
   width: 48px;
   fill: #333;
   transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 
-.card:hover {
+.card1:hover {
   transform: scale(1.05);
   box-shadow: 0 8px 16px rgba(255, 255, 255, 0.2);
 }
 
-.card__content {
+.card1__content {
   position: absolute;
   top: 0;
   left: 0;
@@ -515,24 +515,24 @@ section.presentation .present{
   transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 
-.card:hover .card__content {
+.card1:hover .card1__content {
   transform: rotateX(0deg);
 }
 
-.card__title {
+.card1__title {
   margin: 0;
   font-size: 24px;
   color: #333;
   font-weight: 700;
 }
 
-.card:hover svg {
+.card1:hover svg {
   scale: 0;
 }
 
-.card__description {
+.card1__description {
   margin: 10px 0 0;
   font-size: 14px;
   color: #777;
   line-height: 1.4;
-} */
+}
